Tried to get Hangman working - didn't quite get there, but I made alof of good progress!

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 		<h2>Here's the animal whose name you need to guess: </h2>
 		<h2><span id = "currentPick"></span></h2>
 
-		<h3>Valid characters are A -> Z and spaces.</h3>
-		<h3>Note: A space is a freebie! It won't make your lives go down if you click the spacebar </h3> 
+		<h3>Valid characters are A -> Z and dashes(-).</h3>
+		<h3>Note: The dash acts like a space - meaning it separates two words. Best of all, it's a freebie! It won't make your lives go down if you use it. </h3> 
 
 		<!-- <h2>(or numbers 0 -> 9)</h2> -->
 		
